<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="8dp"
    tools:background="@color/main_background_color">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:backgroundTint="@color/main_background_color"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/card_picture"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:foreground="@drawable/ic_background_gradient"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/star_1"
                tools:src="@drawable/avengers_card_background"/>

            <ImageView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:src="@drawable/ic_like"
                app:layout_constraintTop_toTopOf="@id/pg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/pg"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/pg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:src="@drawable/ic_pg_13" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/gray_1"
                android:textSize="8sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/pg"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/release_date"
                />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/star_1"
                app:layout_constraintBottom_toTopOf="@id/release_date"
                app:layout_constraintStart_toStartOf="@id/pg"
                app:layout_constraintEnd_toEndOf="@id/like"
                tools:text="@string/avengers_film" />

            <ImageView
                android:id="@+id/star_1"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/ic_star_icon"
                app:layout_constraintStart_toStartOf="@id/pg"
                app:layout_constraintBottom_toBottomOf="@id/card_picture"/>

            <ImageView
                android:id="@+id/star_2"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/ic_star_icon"
                app:layout_constraintStart_toEndOf="@id/star_1"
                app:layout_constraintBottom_toBottomOf="@id/star_1"
                />

            <ImageView
                android:id="@+id/star_3"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/ic_star_icon"
                app:layout_constraintStart_toEndOf="@id/star_2"
                app:layout_constraintBottom_toBottomOf="@id/star_1"/>

            <ImageView
                android:id="@+id/star_4"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/ic_star_icon"
                app:layout_constraintStart_toEndOf="@id/star_3"
                app:layout_constraintBottom_toBottomOf="@id/star_1"/>

            <ImageView
                android:id="@+id/star_5"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/ic_star_icon_dark"
                app:layout_constraintStart_toEndOf="@id/star_4"
                app:layout_constraintBottom_toBottomOf="@id/star_1"/>

            <TextView
                android:id="@+id/reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_1"
                android:layout_marginStart="4dp"
                android:textSize="8sp"
                android:textStyle="bold"
                tools:text="@string/movie_num_reviews"
                app:layout_constraintStart_toEndOf="@id/star_5"
                app:layout_constraintBottom_toBottomOf="@id/star_1"
                app:layout_constraintTop_toTopOf="@id/star_1"/>

            <TextView
                android:id="@+id/genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/highlight_red_color"
                android:textSize="10sp"
                android:layout_marginBottom="4dp"
                app:layout_constraintStart_toStartOf="@id/pg"
                app:layout_constraintBottom_toTopOf="@id/star_1"
                app:layout_constraintEnd_toEndOf="@id/like"
                tools:text="@string/avengers_tag_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>